# github-actions-workflows

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: psr-ci.yml
src/github-actions-workflows/: __init__.py
tests/: test_main.py
