[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Martin Hjelmare <marhje52@gmail.com>"]
description = ""
license = "Apache Software License 2.0"
name = "github-actions-workflows"
packages = [
  {include = "github-actions-workflows", from = "src"},
]
version = "0.2.4"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
python-semantic-release = "^9.0.0"

[tool.semantic_release]
build_command = "pip install poetry && poetry build"
upload_to_vcs_release = false
version_source = "tag"
version_toml = ["pyproject.toml:tool.poetry.version"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "^chore.*",
  "^ci.*",
]
